--- a/Storage/appsettings.json
+++ b/Storage/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StorageContext": "Server=(localdb)\\mssqllocaldb;Database=StorageContext-72140fa4-5034-4a23-9c75-7d77bded5d05;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
